# airsensor

./: .ccls  .gitignore  Makefile  README.md  blink.app.c  blink.c  dht11.c  dht11.h  fast_gpio.h  flash.sh  gpio.c  gpio.h  led.c  led.h  lib.h  log.c  log.h  mlt_bt05.c  mlt_bt05.h  test.app.c  uart.c  uart.h  weather.app.c  weather.c
device/: Makefile  blink.app.c  bt.app.c  dht11.c  led.h  log.c  pi.sh  test.app.c  uart.h
server/: Cargo.toml  Makefile
server/migrations/20201107160740_readings/: down.sql  up.sql
server/src/: alpha_sensor.rs  api.rs  database.rs  main.rs  schema.rs  sensor.rs  sqlite_database.rs
ui/: .gitignore  Makefile  index.html  package-lock.json  package.json  sensor-card.ts  style.css
ui/css/: style.css
ui/html/: index.html
ui/src/: index.ts  localization.ts  reading.ts  sensor-card.ts  sensor-chart.ts  sensor-updater.ts  sensors-api.ts
