[package]
name = "server"
version = "0.1.0"
authors = ["Woland <me@woland.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.2"
actix-web = "3"
serde = "1.0"
signal-hook = "0.1.13"
btleplug = "0.5.4"
