[package]
name = "server"
version = "0.1.0"
authors = ["Woland <me@woland.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.2"
actix-web = "3"
actix-files = "0.4.0"
serde = "1.0"
signal-hook = "0.1.13"
btleplug = "0.5.5"
diesel = { version = "1.4.5", features = ["sqlite", "r2d2", "chrono", "numeric", "default"] }
diesel_migrations = "1.4"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.8.2"
log = "0.4.14"
